--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prismjs": "^1.30.0",
     "three": "^0.169.0",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
